--- a/profile.html
+++ b/profile.html
@@ -8,11 +8,14 @@
 
   <!-- Bootstrap if we need it -->
   <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
     crossorigin="anonymous"
   />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -43,16 +46,12 @@
 <body>
     
   <div class="back-button-container">
-    <a href="main.html">
-    <button>
-        ← Back
-    </button>
-    </a>
+    <button onclick="window.history.back()">← Back</button>
   </div>
 
   <nav id="navbarPlaceholder"></nav>
 
-<div class="container">
+<div class="container" id="userProfileContainer">
     <h1>User Profile </h1>
     <form>
         <fieldset class="mb-3" id="personalInfoFields" disabled>
@@ -72,12 +71,12 @@
             </div> -->
         </fieldset>
         <div class="d-flex justify-content-end mt-5">
-            <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
-            <span style="width: 10px"></span>
-            <button type="button" class="btn btn-info" onclick="saveUserInfo()">Save</button>
+            <button type="button" id="editUserInfoButton" class="btn" onclick="editUserInfo()">Edit</button>
+            <button type="button" id="saveUserInfoButton" class="btn" onclick="saveUserInfo()">Save</button>
         </div>
     </form>
 </div>
+
 <br>
 <br>
 
