firebase deploy YIIPPIIEEE

--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,7 @@
       }
       p, ul {
       font-family: "Roboto", sans-serif;
-      font-weight: 200;
+      font-weight: 300;
       font-style: normal;
       }
     </style>
@@ -59,7 +59,7 @@
       <button class="back-button">← Back</button></a>
     </header>
 
-    <nav id="navbarPlaceholder"></nav>
+    <!-- <nav id="navbarPlaceholder"></nav> -->
 
     <div id="aboutUs">
       <div>
@@ -136,7 +136,6 @@
     <!--ngl i forgot how to add space at the bottom so I put br for now-->
     <br /><br /><br /><br />
 
-    <nav id="navbarPlaceholder"></nav>
 
     <!-- JS funcs  -->
     <script src="scripts/firebaseConfig.js"></script>
