--- a/map.html
+++ b/map.html
@@ -96,7 +96,8 @@
     <!---------------------------------------------->
     <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/skeleton.js"></script>
-    <script src="scripts/station.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/stationsandroutes.js"></script>
     <script src="scripts/search.js"></script>
     <script type="module" src="./scripts/map.js"></script>
 
