--- a/route.html
+++ b/route.html
@@ -33,19 +33,13 @@
     <script src="scripts/skeleton.js" defer></script>
     <script src="scripts/recentlyviewed.js" defer></script>
     <script src="scripts/bookmark.js" defer></script>
-  
-
-
 </head>
 <body>
   <nav id="navbarPlaceholder"></nav>
 
-  <div class="back-button-container">
-    <button onclick="window.history.back()">← Back</button>
-  </div>
 
   <h1 id="routeName">Route Name</h1>
-  <p id="routeDescription">Description: </p>
+  <p id="routeDescription" style="display: none;">Description: </p>
   <p id="currentSafetyLevel">Current Safety Level: N/A</p>
 
   <div class="back-button-container">
