more frontend -himmat

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             
             <h2 id="homepage-featurelistheader">Features for Stations and Routes</p>
             <p id="homepage-featurelistitem"><strong>·</strong> View and report how safe you feel using Safety Level <strong>·</strong></p>
-            <p id="homepage-featurelistitem"><strong>·</strong> View and report specific incidents using Incidents <strong>·</strong></p>
+            <p id="homepage-featurelistitem"><strong>·</strong> View and report experiences using Incidents <strong>·</strong></p>
             <p id="homepage-featurelistitem">NEW: View your Station on the Map page!</p>
 
             <img src="media/stations-mockup.png" id="stations-mockup">
