--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TransitAura-Bookmark</title>
+  <title>TransitAura - Profile</title>
   <meta name="comp1800 template" content="My 1800 App" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -64,12 +64,8 @@
                 <label >Name</label>
                 <input type="text" id="nameInput" class="form-control">
             </div>
-
-            <!-- <div class="form-group">
-                <label >Password</label>
-                <input type="text" id="passwordInput" class="form-control" placeholder="">
-            </div> -->
         </fieldset>
+        
         <div class="d-flex justify-content-end mt-5">
             <button type="button" id="editUserInfoButton" class="btn" onclick="editUserInfo()">Edit</button>
             <button type="button" id="saveUserInfoButton" class="btn" onclick="saveUserInfo()">Save</button>
@@ -80,10 +76,6 @@
 <br>
 <br>
 
-<div class="container" id="auraPointsDisplay"> 
-    <h1> Aura Points </h1>
-    <div id="userAuraPoints"> </div>
-</div>
 
 
 
