--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -33,6 +33,7 @@
   </nav>
 
   <div class="dropup-menu" id="profileDropupMenu">
+    <a href="./aurapoints.html"><button id="auraPointsButton" class="btn btn-outline-light mt-3">Aura Points</button></a>
     <a href="./profile.html"><button id="accountDetailsButton" class="btn btn-outline-light mt-3">Account Details</button></a>
     <a href="../index.html"><button id="logoutButton" class="btn btn-outline-light mt-3" onclick="logout()">Logout</button></a>
     <button id="closeButton" class="btn btn-outline-light mt-3" onclick="toggleDropupMenu()">✖</button>
