one more thing: added No Aura

--- a/aurapoints.html
+++ b/aurapoints.html
@@ -102,6 +102,10 @@
             <td>5</td>
             <td>Ligma</td>
           </tr>
+          <tr>
+            <td>0</td>
+            <td>No Aura</td>
+          </tr>
         </tbody>
       </table>
     </div>
