--- a/map.html
+++ b/map.html
@@ -70,8 +70,7 @@
 <!-- Main Body -->
 <main>
     <!-- MAPBOX -->
-    <h2>Map View Holder</h2>
-    <div id='map' style='width: 100%; height: 1000px;'></div>
+    <div id='map' style='width: 100%; height: 100vh'></div>
     <!-- MAPBOX -->
      
     <!-- <div>
