--- a/searchroutes.html
+++ b/searchroutes.html
@@ -46,7 +46,7 @@
 
     <nav id="navbarPlaceholder"></nav>
 
-    <h1>Search Routes</h1>
+    <h1 style="text-align: center;">Search Your Route</h1>
 
     <div>
         <input
@@ -57,7 +57,7 @@
         />
     </div>
 
-    <p>Click on View Route to see and report Safety Level and Incidents!</p>
+    <p style="text-align: center; font-size: small; margin-top: 3px;">Click on View Route to see and report Safety Level and Incidents!</p>
 
     <template id="routesTemplate">
         <div class="card route-card">
