--- a/searchstations.html
+++ b/searchstations.html
@@ -65,7 +65,7 @@
         />
     </div>
 
-    <p>Click on View Station to see and report Safety Levels and Incidents!</p>
+    <p style="text-align: center; font-size: small; margin-top: 3px;">Click on View Station to see and report Safety Levels and Incidents!</p>
     
     <div id="stations-go-here"></div>
     
