--- a/station.html
+++ b/station.html
@@ -34,16 +34,17 @@
 <body>
   <nav id="navbarPlaceholder"></nav>
 
-
+  <div class="back-button-container">
+    <button onclick="window.history.back()">← Back</button>
+  </div>
+  
   <h1 id="stationName">Station Name</h1>
   <p id="stationNeighborhood">Neighborhood: </p>
   <p id="stationDescription">Description: </p>
   <p id="stationFacilities">Facilities: </p>
   <p id="currentSafetyLevel">Current Safety Level: </p>
 
-  <div class="back-button-container">
-    <button onclick="window.history.back()">← Back</button>
-  </div>
+
 
   <button id="bookmarkButton" class="btn btn-primary">Bookmark</button>
   <p id="bookmarkMessage" class="mt-2"></p>
@@ -65,16 +66,17 @@
     <p id="safetyReportInfo">No reports in the last hour.</p> <!-- New info text -->
 
 
-
-    <label for="safetyLevelInput">Report Safety Level:</label>
-    <select id="safetyLevelInput">
-        <option value="">Select a level</option>
+    <div class="select-wrapper">
+    <label for="safetyLevelInput"></label>
+    <select id="safetyLevelInput" class="safetySelect">
+        <option value="">Report Safety Level</option>
         <option value="1">1 - Very Unsafe</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5 - Very Safe</option>
     </select>
+    </div>
     <button id="reportSafetyButton">Submit Safety Level</button>
 
     <div id="messageBox" class="mt-3"></div>
