--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
     <!-- Other libs -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <style>
       .view-item, .view-station, .remove-bookmark, .station-bookmark-button {
       width: 100%; 
