--- a/searchstations.html
+++ b/searchstations.html
@@ -29,6 +29,8 @@
     <!-- Other libs -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <!-- <script src="scripts/dropdown.js" defer></script> -->
 
     <style>
