--- a/searchroutes.html
+++ b/searchroutes.html
@@ -26,9 +26,8 @@
     
         <!-- Other libs -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
- 
-    <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <style>
 .view-item, .view-station, .remove-bookmark, .station-bookmark-button, .view-routes, .routes-bookmark-button {
       width: 100%; 
