favicons and some media query stuff -himmat

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>TransitAura</title>
+    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
     <meta name="comp1800 template" content="My 1800 App">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
