--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
     <style>
       .view-item, .view-station, .remove-bookmark, .station-bookmark-button {
       width: 100%; 
