--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,8 @@
       name="description"
       content="Learn more about TransitAura, our mission, and our team dedicated to enhancing public transit safety."
     />
-    <title>About TransitAura | TransitAura's Story</title>
+    <title>About TransitAura</title>
+    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
 
     <!-- Bootstrap if we need it -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
