--- a/map.html
+++ b/map.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>MAP PAGE</title>
+    <title>Map</title>
+    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
