--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TransitAura - Profile</title>
+  <title>Profile</title>
+  <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
   <meta name="comp1800 template" content="My 1800 App" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
