--- a/searchroutes.html
+++ b/searchroutes.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Search Routes</title>
+    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
