--- a/404.html
+++ b/404.html
@@ -23,6 +23,7 @@
     </style>
   </head>
   <body>
+    <!-- firebase 404 format for server framework-->
     <div id="message">
       <h2>404</h2>
       <h1>Page Not Found</h1>
