--- a/route.html
+++ b/route.html
@@ -1,69 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Route Page</title>
   <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
-    <!-- Google Icons (Material Design)-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
-    <!-- Bootstrap if we need it -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
-
-    <!-- Firebase -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
-    <!-- Other libs -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="scripts/firebaseConfig.js"></script>
-    <script src="scripts/login.js"></script>
-    <script src="scripts/utils.js" defer></script>
-    <script src="scripts/stationsandroutes.js" defer></script>
-    <script src="scripts/skeleton.js" defer></script>
-    <script src="scripts/recentlyviewed.js" defer></script>
-    <script src="scripts/bookmark.js" defer></script>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <!-- Firebase -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <!-- Other libs -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="scripts/firebaseConfig.js"></script>
+  <script src="scripts/login.js"></script>
+  <script src="scripts/utils.js" defer></script>
+  <script src="scripts/stationsandroutes.js" defer></script>
+  <script src="scripts/skeleton.js" defer></script>
+  <script src="scripts/recentlyviewed.js" defer></script>
+  <script src="scripts/bookmark.js" defer></script>
 </head>
 <body>
+  <!-- navbar -->
   <nav id="navbarPlaceholder"></nav>
-  
+  <!-- header -->
   <nav class="navbar" style="margin-bottom: 1px; background-color: #e1f0fb;" id="header">
     <div class="container" style="display: flex; justify-content: center;">
       <img src="./media/ta-full-logo.png" alt="TransitAura Logo" id="mainlogo">
     </div>
   </nav>
 
-
+  <!-- route info -->
   <h1 id="routeName" style="font-family: 'Lato', sans-serif; font-size: 35px;">Route Name</h1>
   <p id="routeDescription" style="display: none;">Description: </p>
   <p id="currentSafetyLevel">Current Safety Level: N/A</p>
 
+  <!-- back button and bookmark icon -->
   <div class="backbtnbookmarkicon-container">
     <button onclick="window.history.back()">← Back</button>
   <img src="media/bookmark-unfilled.png" id="bookmarkIcon" class="bookmark-icon" alt="Bookmark icon">
   </div>
 
-
-
-
-<p id="reportMessage"></p> 
+  <!-- success msg -->
+  <p id="reportMessage"></p> 
   <div id="successMessage" class="success-message"></div>
   <div id="messageBox" class="mt-3" style="text-align: center;"></div>
   <div id="incidentMessageBox" class="mt-3" style="text-align: center;"></div>
 
+  <!-- safety level -->
   <div id="safetyLevel">
     <h2>Current Safety Level</h2>
     <div class="safety-bar-container">
@@ -71,10 +66,8 @@
             <div class="average-overlay" id="averageOverlay">N/A</div>
         </div>
     </div>
-    <p id="safetyReportInfo">No reports in the last hour.</p> <!-- New info text -->
-
+    <p id="safetyReportInfo">No reports in the last hour.</p>
   <p id="reportMessage"></p>
-
   <div class="select-wrapper">
     <label for="safetyLevelInput"></label>
     <select id="safetyLevelInput" class="safetySelect">
@@ -87,36 +80,34 @@
     </select>
     </div>
   <button id="reportSafetyButton">Submit Safety Level</button>
-</div>
-
-
-
-<div id="incidents">
-  <h2 id="recentIncidentsH2">Recent Incidents</h2>
-  <div id="recentIncidents" class="mt-5">
-    <h4>Recent Incidents</h4>
-    <div class="incident-list"></div>
   </div>
 
-  <button class="btn btn-primary" id="submitReportBtn">Submit an Incident Report</button>
-
-  <div id="overlay">
-      <div id="overlayContent">
-          <button id="closeOverlay">&times;</button>
-          <h3>Submit an Incident Report</h3>
-          <form id="incidentForm">
-              <div class="mb-3">
-                  <label for="incidentTitle" class="form-label">Title (Optional)</label>
-                  <input type="text" class="form-control" id="incidentTitle" placeholder="Incident Title">
-              </div>
-              <div class="mb-3">
-                  <label for="incidentDetails" class="form-label">Details</label>
-                  <textarea class="form-control" id="incidentDetails" rows="5" placeholder="Provide detailed information about the incident" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit Report</button>
-          </form>
-      </div>
-  </div>
+  <!-- incidents -->
+  <div id="incidents">
+    <h2 id="recentIncidentsH2">Recent Incidents</h2>
+    <div id="recentIncidents" class="mt-5">
+      <h4>Recent Incidents</h4>
+      <div class="incident-list"></div>
+    </div>
+    <button class="btn btn-primary" id="submitReportBtn">Submit an Incident Report</button>
+    <!-- Incident report overlay -->
+    <div id="overlay">
+        <div id="overlayContent">
+            <button id="closeOverlay">&times;</button>
+            <h3>Submit an Incident Report</h3>
+            <form id="incidentForm">
+                <div class="mb-3">
+                    <label for="incidentTitle" class="form-label">Title (Optional)</label>
+                    <input type="text" class="form-control" id="incidentTitle" placeholder="Incident Title">
+                </div>
+                <div class="mb-3">
+                    <label for="incidentDetails" class="form-label">Details</label>
+                    <textarea class="form-control" id="incidentDetails" rows="5" placeholder="Provide detailed information about the incident" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit Report</button>
+            </form>
+        </div>
+    </div>
 
 </div>
 </body>
@@ -127,7 +118,7 @@
 
     if (routeId) {
         loadRouteData();
-        checkBookmarkStatus(routeId); // Check and set the bookmark status
+        checkBookmarkStatus(routeId);
     }
 });
 </script>
