--- a/station.html
+++ b/station.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Station Page</title>
   <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
-  <!-- Bootstrap if we need it -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Firebase -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -19,7 +19,6 @@
   <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
   <!-- Other libs -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
@@ -32,42 +31,37 @@
   <script src="scripts/skeleton.js" defer></script>
   <script src="scripts/recentlyviewed.js" defer></script>
   <script src="scripts/bookmark.js" defer></script>
-  <!-- <script src="scripts/search.js" defer></script> -->
-
-
 </head>
 <body>
+  <!-- navbar -->
   <nav id="navbarPlaceholder"></nav>
-
+  <!-- header -->
   <nav class="navbar" style="margin-bottom: 1px; background-color: #e1f0fb;" id="header">
     <div class="container" style="display: flex; justify-content: center;">
       <img src="./media/ta-full-logo.png" alt="TransitAura Logo" id="mainlogo">
     </div>
   </nav>
-
   
-  
+  <!-- station info -->
   <h1 id="stationName" style="font-family: 'Lato', sans-serif; font-size: 38px;">Station Name</h1>
   <p id="stationNeighborhood">Neighborhood: </p>
   <p id="stationDescription">Description: </p>
   <p id="stationFacilities">Facilities: </p>
   <p id="currentSafetyLevel">Current Safety Level: </p>
 
+  <!-- back button and bookmark icon -->
   <div class="backbtnbookmarkicon-container">
     <button onclick="window.history.back()">← Back</button>
   <img src="media/bookmark-unfilled.png" id="bookmarkIcon" class="bookmark-icon" alt="Bookmark icon">
   </div>
 
-
-
-
+  <!-- success msg -->
   <p id="reportMessage"></p> 
   <div id="successMessage" class="success-message"></div>
   <div id="messageBox" class="mt-3" style="text-align: center;"></div>
   <div id="incidentMessageBox" class="mt-3" style="text-align: center;"></div>
 
-
-
+<!-- safety level -->
   <div id="safetyLevel">
     <h2>Current Safety Level</h2>
     <div class="safety-bar-container">
@@ -76,8 +70,6 @@
         </div>
     </div>
     <p id="safetyReportInfo">No reports in the last hour.</p> <!-- New info text -->
-
-
     <div class="select-wrapper">
     <label for="safetyLevelInput"></label>
     <select id="safetyLevelInput" class="safetySelect">
@@ -90,14 +82,10 @@
     </select>
     </div>
     <button id="reportSafetyButton">Submit Safety Level</button>
-
     <div id="messageBox" class="mt-3"></div>
 </div>
 
-
-
-
-
+<!-- incidents -->
   <div id="incidents">
     <h2 id="recentIncidentsH2">Recent Incidents</h2>
     <div id="recentIncidents" class="mt-5">
@@ -107,7 +95,7 @@
     <button class="btn btn-primary" id="submitReportBtn">Submit an Incident Report</button>
   </div>
 
-  <!-- Move the overlay here -->
+  <!-- Incident report overlay -->
   <div id="overlay">
     <div id="overlayContent">
       <button id="closeOverlay">X</button>
@@ -125,10 +113,5 @@
       </form>
     </div>
   </div>
-
-
-</body>
-
-    
 </body>
 </html>
