--- a/main.html
+++ b/main.html
@@ -110,8 +110,8 @@
     <br>
     <br>
     <button class="btn btn-danger" onclick="window.location.href='tel:911'">Call 911</button>
-    <button class="btn btn-primary" onclick="window.location.href='tel:6045158300'">Call Tranist Police</button>
-    <button class="btn btn-secondary" onclick="window.location.href='sms:877777'">Text Tranist Police</button>
+    <button class="btn btn-primary" onclick="window.location.href='tel:6045158300'">Call Transit Police</button>
+    <button class="btn btn-secondary" onclick="window.location.href='sms:877777'">Text Transit Police</button>
     <button class="btn btn-outline-light mt-3" onclick="toggleFirstResponderMenu()">Close</button>
   </div>
   <!-- "Help with TransitAura" overlay overlay-->
